@@ -7,7 +7,6 @@ import com.webobjects.appserver.WOContext;
 import com.webobjects.appserver.WOElement;
 import com.webobjects.appserver.WORequest;
 import com.webobjects.appserver.WOResponse;
-
 import com.webobjects.foundation.NSDictionary;
 
 /**
@@ -72,6 +71,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
     /**
      * Creates the panes.
      */
+    @Override
     public void appendToResponse(WOResponse aResponse, WOContext aContext)
     {
     	WOComponent component = aContext.component();
@@ -79,7 +79,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
     	if (isVisble(component)) {
             aResponse.appendContentString("<li id=\"");
             aResponse.appendContentString(tabIdInComponent(component) + "_panel");
-            aResponse.appendContentString("\" updateUrl=\"");
+            aResponse.appendContentString("\" data-updateUrl=\"");
             aResponse.appendContentString(AjaxUtils.ajaxComponentActionUrl(aContext));
     		aResponse.appendContentString("\" class=\"");
             aResponse.appendContentString(isSelected(component) ? "ajaxTabbedPanelPane-selected" : "ajaxTabbedPanelPane-unselected");
@@ -110,6 +110,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
     /** 
      * Do nothing if not visible. 
      */
+    @Override
     public void takeValuesFromRequest(WORequest request, WOContext context)
     {
     	if (isVisble(context.component()) && (isSelected ==  null || isSelected(context.component())) ) {
@@ -120,6 +121,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
     /** 
      * Do nothing if not visible. 
      */
+    @Override
     public WOActionResults invokeAction(WORequest request, WOContext context)
     {
     	if (isVisble(context.component())) {
@@ -146,10 +148,11 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
      */
     public void setIsSelected(WOComponent component, boolean isTabSelected) {
     	if (isSelected != null && isSelected.isValueSettableInComponent(component)) {
-    		isSelected.setValue(new Boolean(isTabSelected), component);
+    		isSelected.setValue(Boolean.valueOf(isTabSelected), component);
     	}
     }
 
+	@Override
 	protected void addRequiredWebResources(WOResponse response, WOContext context) {
 	}
 
@@ -157,6 +160,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
 	 * The pane content is rendered when an Ajax request is received.
 	 * @return the children rendered as HTML
 	 */
+	@Override
 	public WOActionResults handleRequest(WORequest request, WOContext context) {
 		WOResponse response = null;
 		String didSelect = request.stringFormValueForKey("didSelect");
@@ -179,6 +183,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
 	 * @param context WOContext response is being returned in
 	 * @return ID to cache this Ajax response under
 	 */
+	@Override
 	protected String _containerID(WOContext context) {
 		return tabIdInComponent(context.component()) + "_panel";
 	}
@@ -258,7 +263,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
     }
 
 	public void setParentId(WOAssociation aParentId) {
-		this.parentId = aParentId;
+		parentId = aParentId;
 	}
 
 	public WOAssociation parentId() {
@@ -266,7 +271,7 @@ public class AjaxTabbedPanelTab extends AjaxDynamicElement {
 	}
 
 	public void setTabNumber(WOAssociation aTabNumber) {
-		this.tabNumber = aTabNumber;
+		tabNumber = aTabNumber;
 	}
 
 	public WOAssociation tabNumber() {
